// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind No default export 1`] = `
Object {
  "source": "
      export const myStory = () => {};
    ",
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-story-kind default export - no title 1`] = `
Object {
  "parameters": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 9,
          "line": 2,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "test",
      "value": 1,
    },
  ],
  "source": "
      export default {
        test: 1,
      };
    ",
  "stories": Object {},
  "title": undefined,
}
`;

exports[`csf-story-kind default export - with title 1`] = `
Object {
  "parameters": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 41,
          "line": 2,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "title",
      "value": "Storybook/Blocks/ControlsTable",
    },
  ],
  "source": "
        export default {
          title: 'Storybook/Blocks/ControlsTable',
        };
      ",
  "stories": Object {},
  "title": "Storybook/Blocks/ControlsTable",
}
`;

exports[`csf-story-kind default export - with title and controls 1`] = `
Object {
  "parameters": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 2,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "title",
      "value": "Storybook/Kind",
    },
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 26,
          "line": 3,
        },
        "start": Position {
          "column": 2,
          "line": 3,
        },
      },
      "name": "component",
      "value": "ControlsTable",
    },
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 13,
        },
        "start": Position {
          "column": 2,
          "line": 4,
        },
      },
      "name": "parameters",
      "value": Array [
        Object {
          "loc": SourceLocation {
            "end": Position {
              "column": 5,
              "line": 12,
            },
            "start": Position {
              "column": 4,
              "line": 5,
            },
          },
          "name": "controls",
          "value": Array [
            Object {
              "loc": SourceLocation {
                "end": Position {
                  "column": 7,
                  "line": 11,
                },
                "start": Position {
                  "column": 6,
                  "line": 6,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 31,
                      "line": 7,
                    },
                    "start": Position {
                      "column": 8,
                      "line": 7,
                    },
                  },
                  "name": "type",
                  "value": "ControlTypes.TEXT",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 21,
                      "line": 8,
                    },
                    "start": Position {
                      "column": 8,
                      "line": 8,
                    },
                  },
                  "name": "label",
                  "value": "Name",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 21,
                      "line": 9,
                    },
                    "start": Position {
                      "column": 8,
                      "line": 9,
                    },
                  },
                  "name": "value",
                  "value": "Mark",
                },
                Object {
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 19,
                      "line": 10,
                    },
                    "start": Position {
                      "column": 8,
                      "line": 10,
                    },
                  },
                  "name": "order",
                  "value": 9999,
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "source": "
      export default {
        title: 'Storybook/Kind',
        component: ControlsTable,
        parameters: {
          controls: {
            name: {
              type: ControlTypes.TEXT,
              label: 'Name',
              value: 'Mark',
              order: 9999,
            },
          },
        },
      };
      ",
  "stories": Object {},
  "title": "Storybook/Kind",
}
`;

exports[`csf-story-kind default export - with title and parameters 1`] = `
Object {
  "parameters": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 41,
          "line": 2,
        },
        "start": Position {
          "column": 2,
          "line": 2,
        },
      },
      "name": "title",
      "value": "Storybook/Blocks/ControlsTable",
    },
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 3,
          "line": 8,
        },
        "start": Position {
          "column": 2,
          "line": 3,
        },
      },
      "name": "parameters",
      "value": Array [
        Object {
          "loc": SourceLocation {
            "end": Position {
              "column": 28,
              "line": 4,
            },
            "start": Position {
              "column": 4,
              "line": 4,
            },
          },
          "name": "component",
          "value": "ControlsTable",
        },
        Object {
          "loc": SourceLocation {
            "end": Position {
              "column": 5,
              "line": 7,
            },
            "start": Position {
              "column": 4,
              "line": 5,
            },
          },
          "name": "addonControls",
          "value": Array [
            Object {
              "loc": SourceLocation {
                "end": Position {
                  "column": 18,
                  "line": 6,
                },
                "start": Position {
                  "column": 6,
                  "line": 6,
                },
              },
              "name": "smart",
              "value": false,
            },
          ],
        },
      ],
    },
  ],
  "source": "
        export default {
          title: 'Storybook/Blocks/ControlsTable',
          parameters: {
            component: ControlsTable,
            addonControls: {
              smart: false,
            }
          },
        };
      ",
  "stories": Object {},
  "title": "Storybook/Blocks/ControlsTable",
}
`;
